Use Shield-compatible UTF-8 URL encoding for voice authentication